<resources>
    <string name="app_name">Hazelnut</string>
    <string name="air">Воздух</string>
    <string name="soil">Влажность почвы</string>
    <string name="water">Запас воды</string>
    <string name="temperature_value">--</string>
    <string name="luminosity_value">--</string>
    <string name="airHumidity_value">--</string>
    <string name="soilHumidity_value">--</string>
    <string name="waterInventory_value">--</string>
    <string name="pour_water">Включить полив</string>
    <string name="iskratest">*отправить запрос искре</string>
    <string name="insidetest">*отправить запрос себе</string>
    <string name="spring_water">Включить орошение</string>
</resources>
